[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.3.0",
    "Pillow == 10.*"
    "pandas == 2.2.3",
    "Office365-REST-Python-Client == 2.5.14",
    "python-docx == 1.1.2",
    "openpyxl == 3.1.5",
    "requests == 2.32.3",
    "pyodbc == 5.2.0",
    "pytz == 2024.2",
    "tzdata == 2024.2",
    "lxml == 4.9.3",
]


[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
